<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/filters_root"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.main.filter.FiltersFragment">

    <com.google.android.material.appbar.AppBarLayout
        android:id="@+id/filters_appbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="?attr/colorPrimary"
        android:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar">


        <androidx.appcompat.widget.Toolbar
            android:id="@+id/filters_toolbar"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            android:layout_gravity="top"
            app:layout_collapseMode="pin"
            app:menu="@menu/filters_menu"
            app:popupTheme="@style/ThemeOverlay.AppCompat.Light">

        </androidx.appcompat.widget.Toolbar>

    </com.google.android.material.appbar.AppBarLayout>


    <androidx.core.widget.NestedScrollView
        android:layout_marginTop="?attr/actionBarSize"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <com.jaygoo.widget.RangeSeekBar
                android:id="@+id/rarity_seek_bar"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="16dp"
                android:paddingStart="16dp"
                android:paddingEnd="16dp"
                app:layout_constraintTop_toTopOf="parent"
                app:rsb_indicator_height="wrap_content"
                app:rsb_indicator_width="wrap_content"
                app:rsb_max="4"
                app:rsb_min="0"
                app:rsb_min_interval="0"
                app:rsb_mode="range"
                app:rsb_step_auto_bonding="true"
                app:rsb_step_color="@color/colorAccent"
                app:rsb_step_height="5dp"
                app:rsb_step_radius="5dp"
                app:rsb_step_width="5dp"
                app:rsb_steps="4"
                app:rsb_tick_mark_text_array="@array/rarity_array"
                app:rsb_tick_mark_mode="other"
                app:rsb_tick_mark_text_color="@android:color/black"
                app:rsb_tick_mark_text_margin="20dp"/>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/type_til"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.Dense"
                android:layout_margin="16dp"
                android:hint="@string/type_spinner_label"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:endIconMode="dropdown_menu"
                android:labelFor="@id/type_tv"
                app:layout_constraintTop_toBottomOf="@id/rarity_seek_bar">

                <AutoCompleteTextView
                    android:id="@+id/type_tv"
                    style="@style/BoldLabel"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:padding="16dp"
                    android:editable="false"/>
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/class_til"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.Dense"
                android:layout_margin="16dp"
                android:hint="@string/class_spinner_label"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:endIconMode="dropdown_menu"
                android:labelFor="@id/class_tv"
                app:layout_constraintTop_toBottomOf="@id/type_til">

                <AutoCompleteTextView
                    android:id="@+id/class_tv"
                    style="@style/BoldLabel"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:padding="16dp"
                    android:editable="false" />
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/mechanic_til"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.Dense"
                android:layout_margin="16dp"
                android:hint="@string/mechanic_spinner_label"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:endIconMode="dropdown_menu"

                android:labelFor="@id/mechanic_tv"

                app:layout_constraintTop_toBottomOf="@id/class_til">

                <AutoCompleteTextView
                    android:id="@+id/mechanic_tv"
                    style="@style/BoldLabel"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:padding="16dp"
                    android:editable="false" />
            </com.google.android.material.textfield.TextInputLayout>


            <com.google.android.material.radiobutton.MaterialRadioButton
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:textSize="18sp"
                android:id="@+id/sort_alphabetic_rb"
                app:layout_constraintTop_toBottomOf="@id/mechanic_til"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toStartOf="@id/sort_alphabetic_cb"
                android:text="@string/sort_alphabetical_label"
                android:layout_margin="16dp"/>

            <com.google.android.material.checkbox.MaterialCheckBox
                android:id="@+id/sort_alphabetic_cb"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:layout_constraintTop_toTopOf="@id/sort_alphabetic_rb"
                app:layout_constraintBottom_toBottomOf="@id/sort_alphabetic_rb"
                app:layout_constraintStart_toEndOf="@id/sort_alphabetic_rb"
                android:layout_marginEnd="16dp"
                android:button="@drawable/sorting_switch_selector"
                app:layout_constraintEnd_toEndOf="parent"/>

            <com.google.android.material.radiobutton.MaterialRadioButton
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:textSize="18sp"
                android:id="@+id/sort_rarity_rb"
                app:layout_constraintTop_toBottomOf="@id/sort_alphabetic_rb"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toStartOf="@id/sort_rarity_cb"
                android:text="@string/sort_rarity_label"
                android:layout_margin="16dp"/>

            <com.google.android.material.checkbox.MaterialCheckBox
                android:id="@+id/sort_rarity_cb"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:layout_constraintTop_toTopOf="@id/sort_rarity_rb"
                app:layout_constraintBottom_toBottomOf="@id/sort_rarity_rb"
                app:layout_constraintStart_toEndOf="@id/sort_rarity_rb"
                android:layout_marginEnd="16dp"
                android:button="@drawable/sorting_switch_selector"
                app:layout_constraintEnd_toEndOf="parent"/>


        </androidx.constraintlayout.widget.ConstraintLayout>
    </androidx.core.widget.NestedScrollView>

</androidx.coordinatorlayout.widget.CoordinatorLayout>